Various new options for M3

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 				<option value="ms-2016">S (2016)</option>
 				<option value="mx">X</option>
 			</select>
+			<label class="m3">
+				<input id="MT304" type="checkbox" />Performance
+			</label>
 		</fieldset>
 		<fieldset>
 			<legend>Render</legend>
@@ -27,8 +30,9 @@
 				<option class="ms" value="STUD_ABOV">Rear above</option>
 				<option class="rd" value="STUD_FRNT">Front</option>
 				<option value="STUD_3QTR">Front angled</option>
-				<option class="ms mx rd" value="STUD_REAR">Rear angled</option>
+				<option value="STUD_REAR">Rear angled</option>
 				<option selected="selected" value="STUD_SIDE">Side profile</option>
+				<option class="m3" value="STUD_DRIVER">Drivers seat</option>
 				<option class="m3" value="STUD_WHEEL">Wheels close-up</option>
 				<option class="ms mx" value="STUD_SEAT_ABOVE">Seating above</option>
 				<option class="ms-2012" value="STUD_SEAT_DRIVER">Drivers seat</option>
@@ -66,6 +70,7 @@
 					</optgroup>
 					<optgroup label="Metallic">
 						<option class="m3" value="PPSB">Deep Blue</option>
+						<option class="m3" value="PMBL">Obsidian Black</option>
 						<option class="m3" value="PMNG">Midnight Silver</option>
 						<option class="m3" value="PMSS">Starlight Silver</option>
 						<option class="ms mx" value="COL2-PPSB">Deep Blue</option>
@@ -104,6 +109,7 @@
 				<select id="wheels">
 					<option class="m3" value="W38B">18″ Aero</option>
 					<option class="m3" value="W39B">19″ Sport</option>
+					<option class="m3" value="W32P">20″ Sport</option>
 					<option class="rd" value="WHL1">Cast Aluminum</option>
 					<option class="rd" selected="selected" value="WHL2">Forged Silver</option>
 					<option class="rd" value="WHL3">Forged Black</option>
@@ -130,6 +136,7 @@
 						<option value="WT22">Silver Turbine</option>
 						<option value="WTUT">Black Turbine</option>
 					</optgroup>
+					<option value="">None</option>
 				</select>
 			</label>
 			<label class="ms rd">Roof
@@ -308,6 +315,14 @@
 			<div class="release-notes">
 				Release notes
 				<ol>
+					<li>26 June 2018
+						<ul>
+							<li>3 performance &amp; 20" wheels</li>
+							<li>3 obsidian black</li>
+							<li>3 rear &amp; driver view</a></li>
+							<li>All no wheels option</a></li>
+						</ul>
+					</li>
 					<li>8 June 2018
 						<ul>
 							<li>S vent seats 2016 only</li>
