--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 			<select id="view">
 				<option class="ms" value="STUD_ABOV">Rear above</option>
 				<option class="rd" value="STUD_FRNT">Front</option>
-				<option value="STUD_3QTR">Front angled</option>
+				<option selected="selected" value="STUD_3QTR">Front angled</option>
 				<option value="STUD_REAR">Rear angled</option>
-				<option selected="selected" value="STUD_SIDE">Side profile</option>
+				<option value="STUD_SIDE">Side profile</option>
 				<option class="m3" value="STUD_DRIVER">Drivers seat</option>
 				<option class="m3" value="STUD_WHEEL">Wheels close-up</option>
 				<option class="ms mx" value="STUD_SEAT_ABOVE">Seating above</option>
