Add P3 19' wheels and X oak

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 				<select id="wheels">
 					<option class="m3" value="W38B">18″ Aero</option>
 					<option class="m3" value="W39B">19″ Sport</option>
+					<option class="m3" id="3-perf-wheels" value="W39P">19″ Performance</option>
 					<option class="m3" value="W32P">20″ Sport</option>
 					<option class="rd" value="WHL1">Cast Aluminum</option>
 					<option class="rd" selected="selected" value="WHL2">Forged Silver</option>
@@ -281,6 +282,7 @@
 					<option class="mx" value="UTPB">Black Plastic</option>
 					<option value="UTAB">Black Alcantara</option>
 					<option value="UTAW">White Alcantara</option>
+					<option class="mx" value="UTZW">Light Headliner</option>
 					<option class="ms-2012" value="">White Alcantara (+Black)</option>
 				</select>
 			</label>
@@ -290,7 +292,7 @@
 					<option class="ms-2016 mx" value="IDBO">Figured Ash Wood</option>
 					<option value="IDCF">Carbon Fiber</option>
 					<option class="ms" value="IDLW">Lacewood</option>
-					<option class="ms-2016" value="IDOK">Oak</option>
+					<option class="ms-2016 mx" value="IDOK">Oak</option>
 					<option value="IDOM">Obeche Matte</option>
 					<option value="IDOG">Obeche Gloss</option>
 					<option class="ms" value="IDPB">Piano Black</option>
@@ -315,6 +317,13 @@
 			<div class="release-notes">
 				Release notes
 				<ol>
+						<li>04 January 2019
+						<ul>
+							<li>3 performance &amp; 19" wheels</li>
+							<li>X light headliner</li>
+							<li>X oak decor</li>
+						</ul>
+					</li>
 					<li>26 June 2018
 						<ul>
 							<li>3 performance &amp; 20" wheels</li>
