Fix silly HTML issue

--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
 						<ul>
 							<li>3 performance &amp; 20" wheels</li>
 							<li>3 obsidian black</li>
-							<li>3 rear &amp; driver view</a></li>
-							<li>All no wheels option</a></li>
+							<li>3 rear &amp; driver view</li>
+							<li>All no wheels option</li>
 						</ul>
 					</li>
 					<li>8 June 2018
