--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 					</optgroup>
 					<optgroup label="Metallic">
 						<option class="m3 my" value="PPSB">Deep Blue</option>
-						<option class="m3 my" value="PMBL">Obsidian Black</option>
+						<option class="m3" value="PMBL">Obsidian Black</option>
 						<option class="m3 my" value="PMNG">Midnight Silver</option>
-						<option class="m3 my" value="PMSS">Starlight Silver</option>
+						<option class="m3" value="PMSS">Starlight Silver</option>
 						<option class="ms mx" value="COL2-PPSB">Deep Blue</option>
 						<option class="ms mx" value="COL2-PMBL">Obsidian Black</option>
 						<option class="ms mx" value="COL2-PMNG">Midnight Silver</option>
