--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 				<option class="ms" value="STUD_ABOV">Rear above</option>
 				<option class="rd" value="STUD_FRNT">Front</option>
 				<option selected="selected" value="STUD_3QTR">Front angled</option>
-				<option value="STUD_REAR">Rear angled</option>
-				<option value="STUD_SIDE">Side profile</option>
-				<option class="m3 my" value="STUD_DRIVER">Drivers seat</option>
+				<option class="m3 rd ms mx" value="STUD_REAR">Rear angled</option>
+				<option class="m3 rd ms mx" value="STUD_SIDE">Side profile</option>
+				<option class="m3" value="STUD_DRIVER">Drivers seat</option>
 				<option class="m3 my" value="STUD_WHEEL">Wheels close-up</option>
 				<option class="ms mx" value="STUD_SEAT_ABOVE">Seating above</option>
 				<option class="ms-2012" value="STUD_SEAT_DRIVER">Drivers seat</option>
