Don't bother with perf wheel rest on Y

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 				<select id="wheels">
 					<option class="my" value="WY18B">18″ Aero</option>
 					<option class="my" value="WY19B">19″ Sport</option>
-					<option class="my" id="y-perf-wheels" value="WY20P">20″ Performance</option>
 					<option class="my" value="WY19P">19″ Performance</option>
+					<option class="my" value="WY20P">20″ Performance</option>
 					<option class="m3" value="W38B">18″ Aero</option>
 					<option class="m3" value="W39B">19″ Sport</option>
 					<option class="m3" id="3-perf-wheels" value="W39P">19″ Performance</option>
