make no wheels a special option

--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
 						<option value="WT22">Silver Turbine</option>
 						<option value="WTUT">Black Turbine</option>
 					</optgroup>
-					<option value="">None</option>
+					<optgroup label="Visual″">
+						<option value="WT00">None</option>
+					</optgroup>
 				</select>
 			</label>
 			<label class="ms rd">Roof
