Wheel wording change

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					<option class="m3" value="W39B">19″ Sport</option>
 					<option class="m3" value="W39P">19″ Performance</option>
 					<option class="m3" value="W32P">20″ Sport</option>
-					<option class="m3" value="W32D">20″ Sport Gray "Performance"</option>
+					<option class="m3" value="W32D">20″ Sport Gray Performance</option>
 					<option class="rd" value="WHL1">Cast Aluminum</option>
 					<option class="rd" selected="selected" value="WHL2">Forged Silver</option>
 					<option class="rd" value="WHL3">Forged Black</option>
