Remove ms-2019 views, broken

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<option class="ms" value="STUD_ABOV">Rear above</option>
 				<option class="rd" value="STUD_FRNT">Front</option>
 				<option selected="selected" value="STUD_3QTR">Front angled</option>
-				<option class="ms-2019" value="STUD_3QTR_V2">Front angled</option>
+				<!-- <option class="ms-2019" value="STUD_3QTR_V2">Front angled</option> -->
 				<option class="m3 rd ms mx" value="STUD_REAR">Rear angled</option>
 				<option class="m3 rd ms mx" value="STUD_SIDE">Side profile</option>
 				<option class="m3" value="STUD_DRIVER">Drivers seat</option>
@@ -41,7 +41,7 @@
 				<option class="ms mx" value="STUD_SEAT_ABOVE">Seating above</option>
 				<option class="ms-2012" value="STUD_SEAT_DRIVER">Drivers seat</option>
 				<option class="ms-2012" value="STUD_SEAT_3QTR">Passenger seat</option>
-				<option class="ms-2019" value="STUD_SEAT_V2">Passenger seat</option>
+				<!-- <option class="ms-2019" value="STUD_SEAT_V2">Passenger seat</option> -->
 				<option class="ms" value="STUD_SEAT_ALTA">Seating angled</option>
 				<option class="ms-2012 rd mx m3 my" value="STUD_SEAT">Seating side</option>
 				<option class="ms-2012 rd" value="OUT1_3QTR">Outside front angled</option>
