New features, fix MS.

--- a/index.html
+++ b/index.html
@@ -113,21 +113,22 @@
 			<label>Wheels
 				<select id="wheels">
 					<optgroup class="my m3" label="18″">
-						<option class="my" value="WY18B">18″ Aero</option>
-						<option class="m3" value="W38B">18″ Aero</option>
+						<option class="my" value="WY18B">Aero</option>
+						<option class="m3" value="W38B">Aero</option>
 					</optgroup>
 					<optgroup class="my m3" label="19″">
-						<option class="my" value="WY19B">19″ Sport</option>
-						<option class="m3" value="W39B">19″ Sport</option>
-						<option class="my" value="WY19P">19″ Performance</option>
-						<option class="m3" value="W39P">19″ Performance</option>
+						<option class="my" value="WY19B">Sport</option>
+						<option class="m3" value="W39B">Sport</option>
+						<option class="my" value="WY19P">Performance</option>
+						<option class="m3" value="W39P">Performance</option>
 					</optgroup>
 					<optgroup class="my m3" label="20″">
-						<option class="my" value="WY20P">20″ Performance</option>
-						<option class="m3" value="W32P">20″ Sport</option>
-						<option class="m3" value="W32D">20″ Sport Gray Performance</option>
+						<option class="my" value="WY20P">Performance</option>
+						<option class="m3" value="W32P">Sport</option>
+						<option class="m3" value="W32D">Sport Gray Performance</option>
+						<option class="m3" value="W33D">Überturbine</option>
 					</optgroup>
-					<optgroup class="td" label="16″/17″">
+					<optgroup class="rd" label="16″/17″">
 						<option class="rd" value="WHL1">Cast Aluminum</option>
 						<option class="rd" selected="selected" value="WHL2">Forged Silver</option>
 						<option class="rd" value="WHL3">Forged Black</option>
@@ -145,11 +146,12 @@
 						<option value="WTSC">Carbon Slipstream</option>
 						<option value="WTHX">Silver Helix</option>
 					</optgroup>
-					<optgroup class="ms" label="21″">
-						<option value="WT21">Silver Turbine</option>
-						<option value="WTSG">Carbon Turbine</option>
+					<optgroup class="ms my" label="21″">
+						<option class="ms" value="WT21">Silver Turbine</option>
+						<option class="ms" value="WTSG">Carbon Turbine</option>
 						<option class="ms-2016" value="WTTC">Carbon Twin Turbine</option>
 						<option class="ms-2016" value="WTAB">Black Arachnid</option>
+						<option class="my" value="WY21P">Überturbine</option>
 					</optgroup>
 					<optgroup class="mx" label="22″">
 						<option value="WT22">Silver Turbine</option>
@@ -179,6 +181,8 @@
 					<option value="BC0R">Red</option>
 				</select>
 			</label>
+			<label class="my">
+				<input id="SLR1" type="checkbox" />Rear Spoiler</label>
 			<label class="ms mx">
 				<input id="X019" type="checkbox" />Rear Spoiler</label>
 			<label class="rd">
@@ -341,6 +345,13 @@
 			<div class="release-notes">
 				Release notes
 				<ol>
+					<li>15 November 2020
+						<ul>
+							<li>Switched renderer for Model S - www now Roadster only</li>
+							<li>Model Y 21" uberturbine wheels & spoiler</li>
+							<li>Model 3 20" uberturbine wheels</li>
+						</ul>
+					</li>
 					<li>18 October 2019
 						<ul>
 							<li>Model 3 sport "performance" grey wheels</li>
